Für BlackSkyStudios geupdated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.riftgames.soundboardtsmmyth"
+        applicationId "com.blackskystudios.soundboardtsmmyth"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -29,5 +29,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.android.support:design:26.1.0'
 }
