--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.riftgames.soundboardtsmmyth">
+    package="com.blackskystudios.soundboardtsmmyth">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.riftgames.soundboardtsmmyth.MainActivity">
+        <activity android:name="com.blackskystudios.soundboardtsmmyth.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
